@@ -977,8 +977,9 @@ static rsv_table_t ip_addr_rsvd[] =
 	{ 0xe0000006, 0xffffffff }, /* OSPF2 routers */
 	{ 0xe0000009, 0xffffffff }, /* RIP v2 routers */
 	{ 0xe000000d, 0xffffffff }, /* PIMd routers */
-	{ 0xe0000010, 0xffffffff }, /* IGMP v3 routers */
-	{ 0xe00000fb, 0xffffffff }, /* Reserved */
+        { 0xe0000016, 0xffffffff }, /* IGMP v3 routers */
+        { 0xe00000fb, 0xffffffff }, /* mDNS */
+        { 0xe00000fc, 0xffffffff }, /* LLMNR */
 	{ 0xe000ff87, 0xffffffff }, /* Reserved */
 	{ 0xeffffffa, 0xffffffff }, /* UPnP */
 };
