@@ -308,6 +308,7 @@
 <br>
 <b>1.1.x</b><br>
 1) kernel: ralink wifi: fix tx ring full issue at M2U enabled.<br>
+2) kernel: ralink wifi: fix m2u filter tabel. Add MDNS and fix IgmpV3 filter.<br>
 <br>
 <br>
 <b>TODO:</b><br>
